# hackathon-phase-2

./: .gitignore  requirements.txt
backend/: CLAUDE.md  auth.py  database.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt
backend/routes/: auth_routes.py  tasks.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: DeleteConfirmDialog.tsx  Header.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx
history/prompts/master/: 11-auth-css-fixes.refactor.prompt.md  13-validation-error-fixes.refactor.prompt.md  14-registration-error-fixes.refactor.prompt.md  15-complete-registration-fix.refactor.prompt.md  16-login-error-fix.refactor.prompt.md  17-auth-import-fix.refactor.prompt.md  19-ui-error-resolution.refactor.prompt.md
